--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -142,104 +142,47 @@ jobs:
           # EOF
 
           # 常用LuCI插件选择:
-           cat >> .config <<EOF
-           CONFIG_PACKAGE_luci-app-accesscontrol=y
-          # CONFIG_PACKAGE_luci-app-acme is not set
-          # CONFIG_PACKAGE_luci-app-adblock is not set
-          CONFIG_PACKAGE_luci-app-adbyby-plus=y
-          # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
-          # CONFIG_PACKAGE_luci-app-ahcp is not set
-          # CONFIG_PACKAGE_luci-app-amule is not set
-          CONFIG_PACKAGE_luci-app-aria2=y
-          CONFIG_PACKAGE_luci-app-arpbind=y
-          # CONFIG_PACKAGE_luci-app-asterisk is not set
-          # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
-          CONFIG_PACKAGE_luci-app-autoreboot=y
-          # CONFIG_PACKAGE_luci-app-baidupcs-web is not set
-          # CONFIG_PACKAGE_luci-app-bcp38 is not set
-          # CONFIG_PACKAGE_luci-app-bird1-ipv4 is not set
-          # CONFIG_PACKAGE_luci-app-bird1-ipv6 is not set
-          # CONFIG_PACKAGE_luci-app-bmx6 is not set
-          # CONFIG_PACKAGE_luci-app-bmx7 is not set
-          # CONFIG_PACKAGE_luci-app-brook-server is not set
-          # CONFIG_PACKAGE_luci-app-cifsd is not set
-          # CONFIG_PACKAGE_luci-app-cjdns is not set
-          # CONFIG_PACKAGE_luci-app-clamav is not set
-          # CONFIG_PACKAGE_luci-app-commands is not set
-          # CONFIG_PACKAGE_luci-app-control-mia is not set
-          # CONFIG_PACKAGE_luci-app-control-timewol is not set
-          # CONFIG_PACKAGE_luci-app-control-webrestriction is not set
-          # CONFIG_PACKAGE_luci-app-control-weburl is not set
-          # CONFIG_PACKAGE_luci-app-cshark is not set
-          CONFIG_PACKAGE_luci-app-ddns=y
-          # CONFIG_PACKAGE_luci-app-diag-core is not set
-          CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y
-          # CONFIG_PACKAGE_luci-app-dnsforwarder is not set
-          CONFIG_PACKAGE_luci-app-dnspod=y
-          # CONFIG_PACKAGE_luci-app-docker is not set
-          # CONFIG_PACKAGE_luci-app-dump1090 is not set
-          # CONFIG_PACKAGE_luci-app-dynapoint is not set
-          # CONFIG_PACKAGE_luci-app-e2guardian is not set
-          # CONFIG_PACKAGE_luci-app-familycloud is not set
-          # CONFIG_PACKAGE_luci-app-fileassistant is not set
-          # CONFIG_PACKAGE_luci-app-filebrowser is not set
-          CONFIG_PACKAGE_luci-app-filetransfer=y
-          CONFIG_PACKAGE_luci-app-firewall=y
-          CONFIG_PACKAGE_luci-app-flowoffload=y
-          # CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
-          # CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
-          # CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
-          CONFIG_PACKAGE_luci-app-frpc=y
-          # CONFIG_PACKAGE_luci-app-fwknopd is not set
-          # CONFIG_PACKAGE_luci-app-guest-wifi is not set
-          # CONFIG_PACKAGE_luci-app-haproxy-tcp is not set
-          CONFIG_PACKAGE_luci-app-hd-idle=y
-          # CONFIG_PACKAGE_luci-app-hnet is not set
-          # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-          # CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers is not set
-          CONFIG_PACKAGE_luci-app-kcptun=y
-          # CONFIG_PACKAGE_luci-app-kodexplorer is not set
-          # CONFIG_PACKAGE_luci-app-lxc is not set
-          # CONFIG_PACKAGE_luci-app-meshwizard is not set
-          # CONFIG_PACKAGE_luci-app-minidlna is not set
-          # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-          # CONFIG_PACKAGE_luci-app-mtwifi is not set
-          # CONFIG_PACKAGE_luci-app-mwan3 is not set
-          # CONFIG_PACKAGE_luci-app-mwan3helper is not set
-          # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
-          # CONFIG_PACKAGE_luci-app-netdata is not set
-          # CONFIG_PACKAGE_luci-app-nft-qos is not set
-          CONFIG_PACKAGE_luci-app-nlbwmon=y
-          # CONFIG_PACKAGE_luci-app-noddos is not set
-          # CONFIG_PACKAGE_luci-app-nps is not set
-          # CONFIG_PACKAGE_luci-app-ntpc is not set
-          # CONFIG_PACKAGE_luci-app-ocserv is not set
-          # CONFIG_PACKAGE_luci-app-olsr is not set
-          # CONFIG_PACKAGE_luci-app-olsr-services is not set
-          # CONFIG_PACKAGE_luci-app-olsr-viz is not set
-          # CONFIG_PACKAGE_luci-app-openvpn is not set
-          # CONFIG_PACKAGE_luci-app-openvpn-server is not set
-          # CONFIG_PACKAGE_luci-app-p910nd is not set
-          # CONFIG_PACKAGE_luci-app-pagekitec is not set
-          CONFIG_PACKAGE_luci-app-passwall=y
-           EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-app-adbyby-plus=y
+          # CONFIG_PACKAGE_luci-app-aria2=y
+          # CONFIG_PACKAGE_luci-app-baidupcs-web=y
+          # CONFIG_PACKAGE_luci-app-docker=y
+          # CONFIG_PACKAGE_luci-app-frpc=y
+          # CONFIG_PACKAGE_luci-app-hd-idle=y
+          # CONFIG_PACKAGE_luci-app-kodexplorer=y
+          # CONFIG_PACKAGE_luci-app-minidlna=y
+          # CONFIG_PACKAGE_luci-app-openvpn=y
+          # CONFIG_PACKAGE_luci-app-openvpn-server=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
+          # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+          # CONFIG_PACKAGE_luci-app-ttyd=y
+          # CONFIG_PACKAGE_luci-app-v2ray-server=y
+          # CONFIG_PACKAGE_luci-app-verysync=y
+          # CONFIG_PACKAGE_luci-app-webadmin=y
+          # CONFIG_PACKAGE_luci-app-wireguard=y
+          # CONFIG_PACKAGE_luci-app-wrtbwmon=y
+          # EOF
 
           # LuCI主题:
-           cat >> .config <<EOF
-           CONFIG_PACKAGE_luci-theme-argon=y
-           CONFIG_PACKAGE_luci-theme-netgear=y
-           EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-theme-argon=y
+          # CONFIG_PACKAGE_luci-theme-netgear=y
+          # EOF
 
           # 常用软件包:
-           cat >> .config <<EOF
-           CONFIG_PACKAGE_curl=y
-           CONFIG_PACKAGE_htop=y
-           CONFIG_PACKAGE_nano=y
-           CONFIG_PACKAGE_screen=y
-           CONFIG_PACKAGE_tree=y
-           CONFIG_PACKAGE_vim-fuller=y
-           CONFIG_PACKAGE_wget=y
-           EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_curl=y
+          # CONFIG_PACKAGE_htop=y
+          # CONFIG_PACKAGE_nano=y
+          # CONFIG_PACKAGE_screen=y
+          # CONFIG_PACKAGE_tree=y
+          # CONFIG_PACKAGE_vim-fuller=y
+          # CONFIG_PACKAGE_wget=y
+          # EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
           # cat >> .config <<EOF
