--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -100,11 +100,11 @@ jobs:
           # 
 
           # 编译x64固件:
-           cat >> .config <<EOF
-           CONFIG_TARGET_armvirt=y
-           CONFIG_TARGET_armvirt_64=y
-           CONFIG_TARGET_armvirt_64_Default=y
-           EOF
+          # cat >> .config <<EOF
+          # CONFIG_TARGET_armvirt=y
+          # CONFIG_TARGET_armvirt_64=y
+          # CONFIG_TARGET_armvirt_64_Default=y
+          # EOF
 
           # 固件压缩:
           # cat >> .config <<EOF
@@ -165,6 +165,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-webadmin=y
           # CONFIG_PACKAGE_luci-app-wireguard=y
           # CONFIG_PACKAGE_luci-app-wrtbwmon=y
+          # CONFIG_PACKAGE_luci-app-passwall=y
           # EOF
 
           # LuCI主题:
