--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -104,6 +104,37 @@ jobs:
           CONFIG_TARGET_armvirt=y
           CONFIG_TARGET_armvirt_64=y
           CONFIG_TARGET_armvirt_64_Default=y
+          CONFIG_TARGET_PROFILE="Default"
+          CONFIG_TARGET_ARCH_PACKAGES="aarch64_generic"
+          CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=generic"
+          CONFIG_CPU_TYPE="generic"
+          CONFIG_LINUX_4_14=y
+          CONFIG_DEFAULT_base-files=y
+          CONFIG_DEFAULT_block-mount=y
+          CONFIG_DEFAULT_busybox=y
+          CONFIG_DEFAULT_coremark=y
+          CONFIG_DEFAULT_default-settings=y
+          CONFIG_DEFAULT_dnsmasq-full=y
+          CONFIG_DEFAULT_dropbear=y
+          CONFIG_DEFAULT_firewall=y
+          CONFIG_DEFAULT_fstools=y
+          CONFIG_DEFAULT_iptables=y
+          CONFIG_DEFAULT_kmod-ipt-offload=y
+          CONFIG_DEFAULT_kmod-ipt-raw=y
+          CONFIG_DEFAULT_kmod-nf-nathelper=y
+          CONFIG_TARGET_PROFILE="Default"
+          CONFIG_TARGET_ARCH_PACKAGES="aarch64_generic"
+          CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=generic"
+          CONFIG_USES_DEVICETREE=y
+          CONFIG_USES_INITRAMFS=y
+          CONFIG_USES_SQUASHFS=y
+          CONFIG_USES_EXT4=y
+          CONFIG_USES_TARGZ=y
+          CONFIG_USES_CPIOGZ=y
+          CONFIG_ARCH_64BIT=y
+          CONFIG_VIRTIO_SUPPORT=y
+          CONFIG_aarch64=y
+          CONFIG_ARCH="aarch64"
           EOF
 
           # 固件压缩:
